--- a/publ/admin.html
+++ b/publ/admin.html
@@ -46,7 +46,7 @@
         <button id="set-code">Set Code</button>
     </div> -->
     <script>
-        const socket = new WebSocket('ws://192.168.94.27:2007');
+        const socket = new WebSocket('wss://sounder.onrender.com');
         const audio = document.getElementById('audio');
 
         socket.onopen = () => {
