--- a/publ/index.html
+++ b/publ/index.html
@@ -57,7 +57,7 @@
         <button id="set-code">Set Code</button>
     </div> -->
     <script>
-        const socket = new WebSocket('ws://192.168.94.27:2007');
+        const socket = new WebSocket('wss://sounder.onrender.com');
         let mediaRecorder;
         let stream;
         let isRecording = false;
